--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 A primeira versão
             </h2>
             <p>
-                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="externo" href="">Dan Morrill.</a> Ele conta que abriu o <a class="externo" href="">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
+                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="externo" href="#">Dan Morrill.</a> Ele conta que abriu o <a class="externo" href="#">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
             </p>
             <picture>
                 <source media="(max-width: 550px)" srcset="imagens/dan-droids-pq.png" type="image/png">
@@ -45,7 +45,7 @@
                 Surge um novo mascote
             </h2>
             <p>
-                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a class="externo" href="">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
+                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a class="externo" href="#">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
             </p>
             
             <picture>
@@ -118,13 +118,13 @@
                     Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
                 </p>
                 <p>
-                    Acesse aqui o site <a class="externo" href="">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
+                    Acesse aqui o site <a class="externo" href="#">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                 </p>
             </aside>
         </section>
     </main>
     <footer>
-        &copy; Mateus Braga
+        <a href="https://github.com/mateusbrga" target="_blank">&copy; Mateus Braga</a>
     </footer>
 </body>
 </html>
